Initial commit - Full MERN Notes App

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 VITE_API_URL=http://localhost:5000
-VITE_FAKE_USER_ID=demo-abc-123
+VITE_CLERK_PUBLISHABLE_KEY="pk_test_Y3VkZGx5LWJsdWViaXJkLTM2LmNsZXJrLmFjY291bnRzLmRldiQ"
